--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "^5.1.26",
+    "miragejs": "^0.1.47"
   },
   "scripts": {
     "start": "react-scripts start",
